<resources>
    <string name="app_name">EReport</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="email_prompt">Enter your email</string>
    <string name="create_an_account">New User? Create An Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login_greeting">Welcome To HealthFile !</string>
    <string name="background_image">Background Image</string>
    <string name="back_to_sign_in">Have an Account? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="reports">Reports</string>
    <string name="tile_image">Tile Image</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_tab1">Home</string>
    <string name="title_tab2">Hospitals</string>
    <string name="title_tab3">Upload</string>
    <string name="title_tab4">Docs</string>
    <string name="title_tab5">Profile</string>
    <string name="no_recent_activities">No Recent Activities</string>
    <string name="upload_report">Upload Report</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="greet_string_register">Create Account</string>
    <string name="login_text">Login</string>
    <string name="navigate_back_button">navigate_back</string>
    <string name="forgot_password_reverse">\?Forgot Password</string>
    <string name="open_camera">Open Camera</string>
    <string name="test_name">Test Name</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="date_of_report">Date of Report</string>
    <string name="referred_by">Referred By</string>
    <string name="data">Data</string>
    <string name="profile_settings_label">Profile Settings</string>
    <string name="notifications_label">Notifications</string>
    <string name="about_label">About</string>
    <string name="logout_label">Logout</string>
    <string name="hospitals_visited_label">Hospitals</string>
    <string name="reports_uploaded_label">Reports</string>
    <string name="prescriptions_uploaded_label">Prescriptions</string>
    <string name="save">Save</string>
    <string name="empty_activities">No Activities.</string>
    <string name="welcome_back">Welcome!</string>
    <string name="recent_activities">Recent Activities</string>
</resources>