<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_tab1" />

    <item
        android:id="@+id/navigation_hospitals"
        android:icon="@drawable/ic_hospital"
        android:title="@string/title_tab2" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_upload"
        android:title="@string/title_tab3" />

    <item
        android:id="@+id/navigation_documents"
        android:icon="@drawable/ic_documents"
        android:title="@string/title_tab4" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_tab5" />
</menu>