<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sjbit.ereport.main.ui.home.HomeFragment"
        android:label="@string/title_tab1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hospitals"
        android:name="com.sjbit.ereport.main.ui.hospitals.HospitalsFragment"
        android:label="@string/title_tab2"
        tools:layout="@layout/fragment_hospitals" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.sjbit.ereport.main.ui.upload.UploadFragment"
        android:label="@string/title_tab3"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_documents"
        android:name="com.sjbit.ereport.main.ui.documents.DocumentsFragment"
        android:label="@string/title_tab4"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sjbit.ereport.main.ui.profile.ProfileFragment"
        android:label="@string/title_tab5"
        tools:layout="@layout/fragment_profile" />
</navigation>