<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/login_screen_background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="Name"
            android:background="@drawable/rounded_border"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="Email"
            android:background="@drawable/rounded_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/passwordLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:hintEnabled="false"-->
<!--            app:passwordToggleEnabled="true"-->
<!--            app:passwordToggleTint="@color/primary_color">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:hint="@string/password"-->
<!--            android:importantForAutofill="no"-->
<!--            android:background="@drawable/rounded_border"-->
<!--            android:inputType="textPassword"-->
<!--            android:textColor="@color/white"-->
<!--            android:textColorHint="@color/white" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/back_to_sign_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>