<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".main.ui.upload.ReportUploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/upload_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/test_name"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/test_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_border"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:padding="12dp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hospital_name"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hospital_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_border"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:padding="12dp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/referred_by"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/referred_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_border"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="12dp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date_of_report"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/date_of_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_border"
            android:importantForAutofill="no"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"
            android:padding="12dp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/data"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:background="@drawable/rounded_border"
            android:gravity="top|start"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="100"
            android:minLines="6"
            android:scrollbars="vertical"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/open_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45" />


    <!--    <ImageView-->
    <!--        android:id="@+id/image"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:src="@mipmap/ic_launcher"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/open_camera"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/upload_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>