<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/welcome_back"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activities_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop = "50dp"
        app:layout_constraintBottom_toBottomOf="@+id/name_layout">

        <TextView
            android:id="@+id/recent_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/recent_activities"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_cards_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/empty_activities"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>