<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/upload_report_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_background"
        android:contentDescription="@string/upload_image"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="8dp"
        android:src="@drawable/ic_upload_inner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/upload_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:text="@string/upload_report"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/upload_report_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/upload_report_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/upload_prescription_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner_background"
        android:contentDescription="@string/upload_image"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="8dp"
        android:src="@drawable/ic_upload_inner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_report_icon"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/upload_prescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:text="@string/upload_prescription"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/upload_prescription_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/upload_report_icon"
        app:layout_constraintTop_toTopOf="@id/upload_prescription_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>