<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <de.hdodenhof.circleimageview.CircleImageView-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:id="@+id/profile_image"-->
        <!--            app:layout_constraintDimensionRatio="1:1"-->
        <!--            app:layout_constraintWidth_percent="0.35"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            android:padding="30dp"-->
        <!--            android:src="@drawable/dummy_profile_picture" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/curved_background"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/dummy_profile_picture"
        app:civ_border_color="@color/black"
        app:civ_border_width="3dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@id/second_layout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_layout"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_home"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:text="Srivalli S B"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="srivalli.akshatha@gmail.com"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/Username" />

    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:elevation="32dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toTopOf="@id/email">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp">

                <TextView
                    android:id="@+id/hospitals_visited"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/primary_color"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@id/hospitals_visited_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hospitals_visited_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hospitals_visited_label"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp">

                <TextView
                    android:id="@+id/no_of_reports"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/primary_color"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@id/no_of_reports_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/no_of_reports_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reports_uploaded_label"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="12dp">

                <TextView
                    android:id="@+id/no_of_prescriptions"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/primary_color"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@id/no_of_prescriptions_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/no_of_prescriptions_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prescriptions_uploaded_label"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/profile_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/banner"
        android:padding="10dp"
        android:layout_margin="35dp"/>
    <TextView
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profile_settings_button"
        android:padding="10dp"
        android:layout_margin="35dp"/>
    <TextView
        android:id="@+id/notifications_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/about_button"
        android:padding="10dp"
        android:layout_margin="35dp"/>
    <TextView
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/notifications_button"
        android:padding="10dp"
        android:layout_margin="35dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>